# Silverfir-nano

./: Cargo.toml  FUSION.md  README.md  sf-nano.md
.cargo/: config.toml
.claude/hooks/: pre-tool-use.py
benchmarks/lua/: fib.lua  fib.sh
benchmarks/wasi/: RESULTS.md  discover_fusion.py  run_tests.py
benchmarks/wasi/brotli/: brotli.wasm
benchmarks/wasi/bzip2/: bench_bzip2.c  bench_bzip2_profile.c  bzip2.wasm  bzip2_profile.wasm
benchmarks/wasi/coremark/: coremark.wasm
benchmarks/wasi/lua/: fib_small.lua  json_bench.lua  raytracer.lua  sunfish.lua  test_clock.lua
benchmarks/wasi/lz4/: bench_lz4.c  bench_lz4_profile.c  lz4.wasm  lz4_profile.wasm
benchmarks/wasi/sha256/: bench_sha256.c  bench_sha256_profile.c  sha256.wasm  sha256_profile.wasm
docs/: DESIGN.md
docs/paper/: draft_v2.md
sf-nano/: Cargo.toml  build.rs
sf-nano-cli/: Cargo.toml
sf-nano-cli-minimal/: Cargo.toml
sf-nano-cli-minimal/src/: main.rs
sf-nano-cli/src/: discover_fusion.rs  main.rs
sf-nano-core/: Cargo.toml
sf-nano-core/src/: error.rs  lib.rs  op_decoder.rs
sf-nano-core/src/module/: entities.rs  mod.rs  type_defs.rs
sf-nano-core/src/module/validator/: expressions.rs
sf-nano-core/src/spectest/: mod.rs  types.rs
sf-nano-core/src/utils/: leb128.rs  limits.rs  payload.rs
sf-nano-core/src/vm/: expr_eval.rs  instance.rs  value.rs
sf-nano-core/src/vm/interp/fast/: encoding.rs  frame_layout.h  fusion_discovery.rs  handlers.toml  handlers_fused.toml  instruction.rs  mod.rs  pattern_trie.rs  profiler.rs  runtime.rs
sf-nano-core/src/vm/interp/fast/builder/: dispatch.rs  emitter.rs  hot_local.rs  mod.rs  stack.rs  temp_inst.rs
sf-nano-core/src/vm/interp/fast/handlers/: call.rs  common.rs  control.rs  global.rs  memory.rs  mod.rs  ref_ops.rs  table.rs
sf-nano-core/src/vm/interp/fast/handlers_c/: arithmetic.c  bitwise.c  call.c  comparison.c  const_local.c  float_ops.c  memory.c  semantics.h  spill_fill.c  unary.c
sf-nano-core/src/vm/interp/fast/trampoline/: vm_trampoline.c  vm_trampoline.h
sf-nano-core/src/wasi/: mod.rs  preview1.rs
sf-nano-core/tests/: smoke.rs
sf-nano-spectest/: Cargo.toml  build.rs
sf-nano-spectest/src/: discovery.rs  main.rs  summary.rs  wast_test_runner.rs
sf-nano-wasitest/: Cargo.toml  build.rs
sf-nano-wasitest/src/: main.rs
sf-nano/src/: constants.rs  lib.rs  opcodes.rs  value_type.rs
sf-nano/src/module/: builder.rs  parser.rs  type_context.rs
sf-nano/src/module/validator/: functions.rs  mod.rs
sf-nano/src/spectest/: discovery.rs  summary.rs
sf-nano/src/utils/: mod.rs
sf-nano/src/vm/: entities.rs  mod.rs  store.rs
sf-nano/src/vm/interp/: mod.rs  raw_value.rs  stack.rs
sf-nano/src/vm/interp/fast/: context.rs  fast_code.rs  frame_layout.rs  mod.rs  precompile.rs  runtime.rs
sf-nano/src/vm/interp/fast/builder/: context.rs  dispatch.rs  finalizer.rs  stack.rs
sf-nano/src/vm/interp/fast/handlers/: call.rs  common.rs  memory.rs  ref_ops.rs
sf-nano/src/vm/interp/fast/handlers_c/: call.c  control.c  conversion.c
sf-nano/src/vm/interp/fast/trampoline/: vm_trampoline.c  vm_trampoline.h
sf-nano/src/wasi/: preview1.rs
tools/: compare_discovery.py
tools/static-discover/: Cargo.toml
tools/static-discover/src/: discovery.rs  main.rs  trie.rs
