[workspace]
members = [
    "sf-nano-core",
    "sf-nano-cli",
    "sf-nano-spectest",
    "sf-nano-wasitest",
]
exclude = [
    "sf-nano-cli-minimal",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
