[workspace]
members = [
    "sf-nano-core",
    "sf-nano-cli",
    "sf-nano-spectest",
    "sf-nano-wasitest",
    "tools/static-discover",
]
exclude = [
    "sf-nano-cli-minimal",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release-stripped]
inherits = "release"
strip = true
