[package]
name = "sf-nano-cli"
version = "0.1.0"
edition = "2021"
authors = ["Bill Ming <mbbill@gmail.com>"]
description = "Command-line WebAssembly runner using sf-nano-core"
license = "MIT/Apache-2.0"

[[bin]]
name = "sf-nano-cli"
path = "src/main.rs"

[dependencies]
sf-nano-core = { path = "../sf-nano-core", features = ["wasi"] }
