[package]
name = "sf-nano-wasitest"
version = "0.1.0"
edition = "2021"
authors = ["Bill Ming <mbbill@gmail.com>"]
description = "WASI test runner for sf-nano"
license = "MIT/Apache-2.0"

[[bin]]
name = "sf-nano-wasitest"
path = "src/main.rs"

[dependencies]
sf-nano-core = { path = "../sf-nano-core", features = ["wasi"] }
log = { version = "0.4", features = ["release_max_level_debug"] }
env_logger = "0.9"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
