[package]
name = "sf-nano-core"
version = "0.1.0"
edition = "2021"
authors = ["Bill Ming <mbbill@gmail.com>"]
description = "A minimal no_std WebAssembly 2.0 interpreter"
license = "MIT/Apache-2.0"
keywords = ["wasm", "webassembly", "interpreter", "no_std"]
categories = ["wasm", "no-std"]

[dependencies]
paste = "1.0"

[features]
default = []
validate = []
wasi = []

[build-dependencies]
cc = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
